# tftp-client-cpp

./: .gitignore  CMakeLists.txt  tftp-client.pc.in
include/: SocketWrapper.h  TFTPClient.h  TFTPDefinitions.h  TFTPUtils.h
src/: SocketWrapper.cpp  TFTPClient.cpp  TFTPUtils.cpp  main.cpp
